Add custom login api

--- a/web/index.html
+++ b/web/index.html
@@ -77,8 +77,12 @@
                 Call Public
             </button>
 
-            <button id="btn-ping-private" class="btn btn-primary">
-                Call Private
+            <button id="btn-ping-private-auth0" class="btn btn-primary">
+                Call Private auth0
+            </button>
+
+            <button id="btn-ping-private-custom" class="btn btn-primary">
+              Call Private custom
             </button>
           </div>
           <h4>Response</h4>
@@ -88,7 +92,7 @@
     </main>
   </div>
 
-  <script src="node_modules/auth0-js/build/auth0.js"></script>
+  <script src="https://cdn.auth0.com/js/auth0/9.11/auth0.min.js"></script>
   <script src="auth0-variables.js"></script>
   <script src="app.js"></script>
 </body>
